; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao_pulse.c_stream_request_cb.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao_pulse.c_stream_request_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ao = type { %struct.priv* }
%struct.priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i8*)* @stream_request_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stream_request_cb(i32* %0, i64 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.ao*, align 8
  %8 = alloca %struct.priv*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.ao*
  store %struct.ao* %10, %struct.ao** %7, align 8
  %11 = load %struct.ao*, %struct.ao** %7, align 8
  %12 = getelementptr inbounds %struct.ao, %struct.ao* %11, i32 0, i32 0
  %13 = load %struct.priv*, %struct.priv** %12, align 8
  store %struct.priv* %13, %struct.priv** %8, align 8
  %14 = load %struct.ao*, %struct.ao** %7, align 8
  %15 = call i32 @wakeup(%struct.ao* %14)
  %16 = load %struct.priv*, %struct.priv** %8, align 8
  %17 = getelementptr inbounds %struct.priv, %struct.priv* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @pa_threaded_mainloop_signal(i32 %18, i32 0)
  ret void
}

declare dso_local i32 @wakeup(%struct.ao*) #1

declare dso_local i32 @pa_threaded_mainloop_signal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
